evision history for Perl module XML::Parser::Lite

0.720_01 2015-05-13 NEILB
    - Developer release (with PHRED's permission) to test changes
    - Specified min perl version of 5.006 in Lite.pm and dist metadata
    - Fixed RT#98635 - skip the planned number of tests
    - Updated this file (Changes) to follow CPAN::Changes::Spec

0.720 2014-09-15 PHRED
    - RT 96206 - add README
    - RT 96209 - add links to other parsers

0.719 2013-12-02 PHRED
    - RT 90873 - restore test suite

0.718 2013-11-26 PHRED
    - add skips for some dependencies
    - https://rt.cpan.org/Ticket/Display.html?id=87604

0.717 2013-05-16 PHRED
	- forked from SOAP::Lite 0.716
